Corrected logic in donations; added scrollbar for card description in product detail page; some changes were made in globals css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,3 +76,24 @@ body::-webkit-scrollbar {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+
+/* for decription of products */
+/* For Webkit browsers (Chrome, Edge, Safari) */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+}
+
+* {
+  scrollbar-width:thin;
+  scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
+}
+
